# form_validator

./: .gitignore  Cargo.toml  readme.md
validator/: Cargo.toml
validator-backend/: Cargo.toml
validator-backend/src/: main.rs
validator-derive/: Cargo.toml
validator-derive/src/: lib.rs
validator-leptos/: Cargo.toml  index.html
validator-leptos/src/: main.rs
validator/src/: lib.rs  prelude.rs  validate.rs
validator/src/engine/: error.rs  mod.rs  validator.rs
validator/src/test/: mail_test.rs  max_length_test.rs  min_length_test.rs  mod.rs  not_allowed_chars_test.rs  positive_test.rs
validator/src/validators/: email_validator.rs  error.rs  max_length.rs  min_length.rs  mod.rs  not_allowed_chars.rs  positive_number_validator.rs  validator.rs  validator_tests.rs
validator/tests/: async_validation_test.rs  complete_validate.rs  cyclic_validation.rs  cyclic_validation_test.rs  derive_validate.rs  mail_test.rs  max_length_test.rs  min_length_test.rs  mutliple_validate.rs  not_allowed_chars_test.rs  positive_test.rs
