[package]
name = "validator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
email = []
positive = []
max_length = []
min_length = []
not_allowed_chars = []
async = ["dep:futures", "validator-derive/async"]
default = ["email", "positive", "max_length", "min_length", "not_allowed_chars"]

[dependencies]
regex = "1.12"
validator-derive = { path = "../validator-derive" }
once_cell = "1.21"
futures = { version = "0.3", optional = true }